pyupgrade, pre-commit autoupdate

--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -127,5 +127,7 @@ line-length = 79
 
 [tool.ruff]
 line-length = 79
-ignore = ["E402", "F403", "F405", "E741"]
 extend-include = ["*.ipynb"]
+
+[tool.ruff.lint]
+ignore = ["E402", "F403", "F405", "E741"]
