--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -29,7 +29,7 @@ jobs:
           fi
 
   dockerhub:
-    name: Deploy Dockerhub
+    name: Deploy Docker Hub
     needs: [check-secret]
     if: needs.check-secret.outputs.secrets-defined == 'true'
     runs-on: ubuntu-22.04
