Deploy releases to Docker Hub (#2413)
Deploy releases (actual releases, not only release branches) to Docker Hub.

Closes #2383

--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -29,7 +29,7 @@ jobs:
           fi
 
   dockerhub:
-    name: Deploy Dockerhub
+    name: Deploy Docker Hub
     needs: [check-secret]
     if: needs.check-secret.outputs.secrets-defined == 'true'
     runs-on: ubuntu-22.04
@@ -50,7 +50,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@v4
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: dweindl/amici
         username: ${{ secrets.DOCKER_USERNAME }}
