--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -130,4 +130,5 @@ line-length = 79
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
+extend-select = ["B028"]
 ignore = ["E402", "F403", "F405", "E741"]
