--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(
   Python3
   COMPONENTS Interpreter Development NumPy
   REQUIRED)
+message(STATUS "Found numpy ${Python3_NumPy_VERSION} include dir ${Python3_NumPy_INCLUDE_DIRS}")
 set(AMICI_INTERFACE_LIST
     ${CMAKE_CURRENT_SOURCE_DIR}/amici.i
     ${CMAKE_CURRENT_SOURCE_DIR}/edata.i
