--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -57,6 +57,9 @@ jobs:
     - run: source venv/bin/activate && pip3 install git+https://github.com/sympy/sympy.git@master
       if: matrix.python-version == '3.12'
 
+    - run: source venv/bin/activate && pip3 install "sympy>=1.12.1"
+      if: matrix.python-version != '3.12'
+
     - name: Python tests
       run: |
         source venv/bin/activate \
