--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ addopts = -vv --strict-markers
 
 filterwarnings =
     # warnings are errors
-    #error
+    error
     # amici
     ignore:Conservation laws for non-constant species in models with RateRules are currently not supported and will be turned off.:UserWarning
     ignore:Conservation laws for non-constant species in models with Species-AssignmentRules are currently not supported and will be turned off.:UserWarning
