--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,8 @@ addopts = -vv --strict-markers
 filterwarnings =
     # warnings are errors
     error
+    # petab
+    ignore:Using petab.v1.Problem with PEtab2.0 is deprecated:DeprecationWarning
     # amici
     ignore:Conservation laws for non-constant species in models with RateRules are currently not supported and will be turned off.:UserWarning
     ignore:Conservation laws for non-constant species in models with Species-AssignmentRules are currently not supported and will be turned off.:UserWarning
