--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Install petab
         run: |
           source ./venv/bin/activate \
-            && pip3 install wheel pytest shyaml pytest-cov pysb
+            && pip3 install wheel pytest shyaml pytest-cov pysb>=1.16
 
       # retrieve test models
       - name: Download and install PEtab test suite
@@ -68,11 +68,20 @@ jobs:
             && source ./venv/bin/activate \
             && cd petab_test_suite && pip3 install -e .
 
+      - name: Install petab
+        run: |
+          source ./venv/bin/activate \
+            && python3 -m pip uninstall -y petab \
+            && python3 -m pip install git+https://github.com/petab-dev/libpetab-python.git@develop \
+            && python3 -m pip install git+https://github.com/FFroehlich/pysb@fix_pattern_matching \
+            && python3 -m pip install sympy>=1.12.1
+
+
       - name: Run PEtab-related unit tests
         run: |
           source ./venv/bin/activate \
             && pytest --cov-report=xml:coverage.xml \
-              --cov=./ python/tests/test_*petab*.py python/tests/petab/
+              --cov=./ python/tests/test_*petab*.py python/tests/petab_/
 
       # run test models
       - name: Run PEtab test suite
