Set CMake3.30 policies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,9 @@
 # Build AMICI library
 #
 cmake_minimum_required(VERSION 3.15)
-cmake_policy(VERSION 3.15...3.27)
-
-# cmake >=3.27
-if(POLICY CMP0144)
-  cmake_policy(SET CMP0144 NEW)
-endif(POLICY CMP0144)
-# cmake >= 3.30
-if(POLICY CMP0167)
-  cmake_policy(SET CMP0167 NEW)
-endif(POLICY CMP0167)
+# When updating the policy version, please also update it in
+# src/CMakeLists.template.cmake
+cmake_policy(VERSION 3.15...3.30)
 
 project(amici)
 
