--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,7 @@ ThirdParty/sundials/build/*
 ThirdParty/SuiteSparse/lib/*
 ThirdParty/SuiteSparse/include/
 ThirdParty/SuiteSparse/share/*
+ThirdParty/SuiteSparse/install/*
 ThirdParty/SuperLU_MT_3.1/
 ThirdParty/superlu_mt_3.1.tar.gz
 ThirdParty/swig-*
