--- a/cmake/AmiciConfig.cmake.in
+++ b/cmake/AmiciConfig.cmake.in
@@ -7,7 +7,7 @@ find_package(OpenMP)
 # Current SUNDIALSConfig.cmake doesn't use KLU's FindKLU, but hardcodes paths,
 # and is not relocatable. This does not work with Python package installation in
 # tmpdirs.
-list(APPEND CMAKE_MODULE_PATH
+list(APPEND CMAKE_PREFIX_PATH
      @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/install/)
 find_dependency(SuiteSparse_config REQUIRED)
 find_dependency(AMD REQUIRED)
