--- a/cmake/AmiciConfig.cmake.in
+++ b/cmake/AmiciConfig.cmake.in
@@ -7,23 +7,8 @@ find_package(OpenMP)
 # Current SUNDIALSConfig.cmake doesn't use KLU's FindKLU, but hardcodes paths,
 # and is not relocatable. This does not work with Python package installation in
 # tmpdirs.
-list(APPEND CMAKE_MODULE_PATH
-     @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/lib/cmake/SuiteSparse/)
-if(NOT DEFINED SUITESPARSE_CONFIG_ROOT)
-  set(SUITESPARSE_CONFIG_ROOT @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/)
-endif()
-if(NOT DEFINED AMD_ROOT)
-  set(AMD_ROOT @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/)
-endif()
-if(NOT DEFINED BTF_ROOT)
-  set(BTF_ROOT @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/)
-endif()
-if(NOT DEFINED COLAMD_ROOT)
-  set(COLAMD_ROOT @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/)
-endif()
-if(NOT DEFINED KLU_ROOT)
-  set(KLU_ROOT @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/)
-endif()
+list(APPEND CMAKE_PREFIX_PATH
+     @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/install/)
 find_dependency(SuiteSparse_config REQUIRED)
 find_dependency(AMD REQUIRED)
 find_dependency(BTF REQUIRED)
