Fix up SuiteSparse upgrade
* don't build more than necessary (no shared libs)
* don't include suitesparse installation directory in sdist

--- a/python/sdist/MANIFEST.in
+++ b/python/sdist/MANIFEST.in
@@ -11,6 +11,7 @@ include LICENSE.md
 exclude amici/*.so
 exclude amici/*.dll
 prune **/build
+prune **/install
 prune amici/share
 prune amici/lib
 prune amici/ThirdParty/SuiteSparse/lib
