--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     name: PEtab Testsuite
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     env:
       ENABLE_GCOV_COVERAGE: TRUE
@@ -67,6 +67,12 @@ jobs:
             https://github.com/PEtab-dev/petab_test_suite \
             && source ./venv/bin/activate \
             && cd petab_test_suite && pip3 install -e .
+
+      - name: Install PEtab benchmark collection
+        run: |
+          git clone --depth 1 https://github.com/benchmarking-initiative/Benchmark-Models-PEtab.git \
+            && export BENCHMARK_COLLECTION="$(pwd)/Benchmark-Models-PEtab/Benchmark-Models/" \
+            && source venv/bin/activate && python -m pip install -e $BENCHMARK_COLLECTION/../src/python
 
       - name: Install petab
         run: |
