--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -79,7 +79,7 @@ jobs:
           source ./venv/bin/activate \
             && python3 -m pip uninstall -y petab \
             && python3 -m pip install git+https://github.com/petab-dev/libpetab-python.git@develop \
-            && python3 -m pip install git+https://github.com/FFroehlich/pysb@fix_pattern_matching \
+            && python3 -m pip install git+https://github.com/pysb/pysb@master \
             && python3 -m pip install sympy>=1.12.1
 
 
