Refactor benchmark collection tests
* Refactor tests/benchmark-models/test_benchmark_collection.sh into pytest cases
* Unify with gradient checks in `tests/benchmark-models/test_petab_benchmark.py`

Closes #2510.

--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -52,23 +52,22 @@ jobs:
         AMICI_PARALLEL_COMPILE="" pip3 install -v --user \
             $(ls -t python/sdist/dist/amici-*.tar.gz | head -1)[petab,test,vis]
 
-    - run: |
+    - name: Install test dependencies
+      run: |
         python3 -m pip uninstall -y petab && python3 -m pip install git+https://github.com/petab-dev/libpetab-python.git@develop \
-        &&  python3 -m pip install -U sympy
+        &&  python3 -m pip install -U sympy \
+        &&  python3 -m pip install git+https://github.com/ICB-DCM/fiddy.git
 
-    # retrieve test models
-    - name: Download and test benchmark collection
+    - name: Download benchmark collection
       run: |
         git clone --depth 1 https://github.com/benchmarking-initiative/Benchmark-Models-PEtab.git \
-          && export BENCHMARK_COLLECTION="$(pwd)/Benchmark-Models-PEtab/Benchmark-Models/" \
-          && pip3 install -e $BENCHMARK_COLLECTION/../src/python \
-          && AMICI_PARALLEL_COMPILE="" tests/benchmark-models/test_benchmark_collection.sh
+          && python3 -m pip install -e Benchmark-Models-PEtab/src/python
 
-    # run gradient checks
-    - name: Run Gradient Checks
+    - name: Run tests
+      env:
+        AMICI_PARALLEL_COMPILE: ""
       run: |
-        pip install git+https://github.com/ICB-DCM/fiddy.git \
-          && cd tests/benchmark-models && pytest --durations=10 ./test_petab_benchmark.py
+          cd tests/benchmark-models && pytest --durations=10
 
     # upload results
     - uses: actions/upload-artifact@v4
