--- a/tests/benchmark-models/benchmark_models.yaml
+++ b/tests/benchmark-models/benchmark_models.yaml
@@ -57,7 +57,7 @@ Elowitz_Nature2000:
   t_adj: 0.11
   note: benchmark collection reference value matches up to sign when applying log10-correction +sum(log(meas*log(10))) / 2
 
-Fiedler_BMC2016:
+Fiedler_BMCSystBiol2016:
   llh: 58.58390161681
   t_sim: 0.005
   t_fwd: 0.05
