--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -293,6 +293,7 @@ jobs:
 
     - name: Python tests
       run: |
+        # ignore warnings until https://github.com/swig/swig/issues/3061 is resolved
         scripts/run-python-tests.sh -W ignore:: \
           test_pregenerated_models.py \
           test_splines_short.py \
@@ -355,6 +356,7 @@ jobs:
 
     - name: Python tests
       run: |
+        # ignore warnings until https://github.com/swig/swig/issues/3061 is resolved
         scripts/run-python-tests.sh -W ignore:: \
           --ignore=test_pregenerated_models.py \
           --ignore=test_splines_short.py \
