--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -293,7 +293,8 @@ jobs:
 
     - name: Python tests
       run: |
-        scripts/run-python-tests.sh \
+        # ignore warnings until https://github.com/swig/swig/issues/3061 is resolved
+        scripts/run-python-tests.sh -W ignore:: \
           test_pregenerated_models.py \
           test_splines_short.py \
           test_misc.py
@@ -355,7 +356,8 @@ jobs:
 
     - name: Python tests
       run: |
-        scripts/run-python-tests.sh \
+        # ignore warnings until https://github.com/swig/swig/issues/3061 is resolved
+        scripts/run-python-tests.sh -W ignore:: \
           --ignore=test_pregenerated_models.py \
           --ignore=test_splines_short.py \
           --ignore=test_misc.py
