--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -85,6 +85,7 @@ jax = [
     "jax>=0.4.34",
     "jaxlib>=0.4.34",
     "diffrax>=0.6.0",
+    "jaxtyping>=0.2.34",
     "equinox>=0.11.8",
     "optimistix>=0.0.9",
     "interpax>=0.3.3",
