CI: Fix installation of homebrew packages
Things started failing yesterday(?), seemingly because of a pre-installed pkgconf interfering with the one to be installed as hdf5 dependency.

--- a/.github/actions/install-macos-dependencies/action.yml
+++ b/.github/actions/install-macos-dependencies/action.yml
@@ -27,5 +27,8 @@ runs:
 
     # install amici dependencies
     - name: homebrew
-      run: brew install hdf5 swig gcc libomp boost
+      # install hdf5 without dependencies, because pkgconf installation fails,
+      # because it's already installed on the runners. install the other
+      # hdf5 dependencies (libaec) manually
+      run: brew install libaec && brew install --ignore-dependencies hdf5 && brew install swig libomp boost
       shell: bash
