--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,6 +21,7 @@ build:
   os: "ubuntu-22.04"
   apt_packages:
     - libatlas-base-dev
+    - libhdf5-serial-dev
     - swig
   tools:
     python: "3.11"
