GHA: codecov/codecov-action 4->5 flag->flags

--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -58,6 +58,6 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: coverage_SBMLSuite.xml
+        files: coverage_SBMLSuite.xml
         flags: sbmlsuite
         fail_ci_if_error: true
