--- a/.github/workflows/test_petab_sciml.yml
+++ b/.github/workflows/test_petab_sciml.yml
@@ -60,15 +60,10 @@ jobs:
         run: |
           git clone --depth 1 --branch main \
             https://github.com/sebapersson/petab_sciml.git \
-            && export TESTSUITE="$(pwd)/petab_sciml" \
+            && export SCIML_TESTSUITE="$(pwd)/petab_sciml" \
             && source venv/bin/activate \
-            && python -m pip install -e $TESTSUITE/../src/python
+            && python -m pip install -e $SCIML_TESTSUITE/src/python
 
-      - name: Install PEtab benchmark collection
-        run: |
-          git clone --depth 1 https://github.com/benchmarking-initiative/Benchmark-Models-PEtab.git \
-            && export BENCHMARK_COLLECTION="$(pwd)/Benchmark-Models-PEtab/Benchmark-Models/" \
-            && source venv/bin/activate && python -m pip install -e $BENCHMARK_COLLECTION/../src/python
 
       - name: Install petab
         run: |
