--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -83,9 +83,9 @@ examples = [
     "scipy",
 ]
 jax = [
-    "jax>=0.4.34,<0.4.36",
-    "jaxlib>=0.4.34",
-    "diffrax>=0.6.0",
+    "jax>=0.4.36",
+    "jaxlib>=0.4.36",
+    "diffrax>=0.6.1",
     "jaxtyping>=0.2.34",
     "equinox>=0.11.8",
     "optimistix>=0.0.9",
