--- a/pytest.ini
+++ b/pytest.ini
@@ -24,5 +24,7 @@ filterwarnings =
     ignore:.*PyDevIPCompleter6.*:DeprecationWarning
     # ignore numpy log(0) warnings (np.log(0) = -inf)
     ignore:divide by zero encountered in log:RuntimeWarning
+    # ignore jax deprecation warnings
+    ignore:jax.* is deprecated:DeprecationWarning
 
 norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples
