--- a/pytest.ini
+++ b/pytest.ini
@@ -26,5 +26,8 @@ filterwarnings =
     ignore:divide by zero encountered in log:RuntimeWarning
     # ignore jax deprecation warnings
     ignore:jax.* is deprecated:DeprecationWarning
+    # pandas
+    ignore:Setting an item of incompatible dtype:FutureWarning
+
 
 norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples
