--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,7 +8,7 @@ version: 2
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   builder: html
-  configuration: documentation/conf.py
+  configuration: doc/conf.py
   fail_on_warning: True
 
 formats:
@@ -16,7 +16,7 @@ formats:
 
 python:
   install:
-    - requirements: documentation/rtd_requirements.txt
+    - requirements: doc/rtd_requirements.txt
 build:
   os: "ubuntu-22.04"
   apt_packages:
