--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,10 @@ passenv = AMICI_PARALLEL_COMPILE,CC,CXX
 description =
     Build documentation
 deps =
-    -r documentation/rtd_requirements.txt
+    -r doc/rtd_requirements.txt
 # don't install the package, this is already handled by `deps` above
 skip_install = true
-change_dir = documentation/
+change_dir = doc/
 allowlist_externals =
     rm
 commands =
