GHA: Fix codecov action file->files
Options changed in https://github.com/codecov/codecov-action v5.

--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -104,6 +104,6 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: coverage.xml
+          files: coverage.xml
           flags: petab
           fail_ci_if_error: true
