GHA: Don't run cron jobs on forks

--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   valgrind_cpp:
     name: Valgrind C++
+    # don't run cron job on forks
+    if: github.repository == 'AMICI-dev/AMICI'
+
     runs-on: ubuntu-24.04
 
     strategy:
@@ -61,6 +64,8 @@ jobs:
 
   valgrind_python:
     name: Valgrind Python
+    # don't run cron job on forks
+    if: github.repository == 'AMICI-dev/AMICI'
 
     runs-on: ubuntu-24.04
 
