Update pytest warning ignores

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,7 +11,7 @@ filterwarnings =
     ignore:Conservation laws for non-constant species in models with RateRules are currently not supported and will be turned off.:UserWarning
     ignore:Conservation laws for non-constant species in models with Species-AssignmentRules are currently not supported and will be turned off.:UserWarning
     ignore:Conservation laws for non-constant species in combination with parameterized stoichiometric coefficients are not currently supported and will be turned off.:UserWarning
-    ignore:Support for PEtab2.0 is experimental!:UserWarning
+    ignore:Support for PEtab2.0.*experimental:UserWarning
     ignore:The JAX module is experimental and the API may change in the future.:ImportWarning
     # hundreds of SBML <=5.17 warnings
     ignore:.*inspect.getargspec\(\) is deprecated.*:DeprecationWarning
