Use sbmlmath package for sympification of SBML math
Directly parse the SBML MathML constructs without going through SBML L3 formula strings are sympy.sympify due to various issues (#2146).

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,8 @@ addopts = -vv --strict-markers
 filterwarnings =
     # warnings are errors
     error
+    # sbmlmath
+    ignore:SBML level < 3 has not been thoroughly tested:UserWarning
     # petab
     ignore:Using petab.v1.Problem with PEtab2.0 is deprecated:DeprecationWarning
     # amici
