--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist =
     doc
 
 [testenv]
-passenv = AMICI_PARALLEL_COMPILE,CC,CXX
+passenv = AMICI_PARALLEL_COMPILE,CC,CXX,GITHUB_ACTIONS
 
 [testenv:doc]
 description =
