Revert "GHA: Workaround for macos segfaults (#2572)"
This reverts commit 2b05a19952a81f409336a9cff9364535bc6e62ff.

--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -288,8 +288,7 @@ jobs:
 
     - name: Python tests
       run: |
-        # ignore warnings until https://github.com/swig/swig/issues/3061 is resolved
-        scripts/run-python-tests.sh -W ignore:: \
+        scripts/run-python-tests.sh \
           test_pregenerated_models.py \
           test_splines_short.py \
           test_misc.py
@@ -351,8 +350,7 @@ jobs:
 
     - name: Python tests
       run: |
-        # ignore warnings until https://github.com/swig/swig/issues/3061 is resolved
-        scripts/run-python-tests.sh -W ignore:: \
+        scripts/run-python-tests.sh \
           --ignore=test_pregenerated_models.py \
           --ignore=test_splines_short.py \
           --ignore=test_misc.py
