--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -18,11 +18,13 @@ RUN apt-get update && apt-get install -y \
 # prepare python install
 
 COPY amici.tar.gz /from_host/
-
-RUN pip3 install --upgrade pip build && \
+RUN bash -c 'python3 -m venv venv && \
+    echo "source $HOME/venv/bin/activate" >> ~/.bashrc && \
+    source venv/bin/activate && \
+    pip3 install --upgrade pip build && \
     mkdir -p /from_host/amici/ && \
     cd /from_host/amici && \
     tar -xzf ../amici.tar.gz && cd python/sdist && \
     python3 -m build --sdist && \
     pip3 install -v $(ls -t dist/amici-*.tar.gz | head -1)[petab] && \
-    rm -rf /from_host
+    rm -rf /from_host'
