Add `amici::Event` class
For more comprehensive SBML event handling, we need track additional attributes of event triggers and assignments.
This will be easiest if we encapsulate event properties in a dedicated class.
This PR adds a basic Event class that stores the initial value of the root function.
This will be extended shortly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,7 @@ set(AMICI_SRC_LIST
     src/splinefunctions.cpp
     src/cblas.cpp
     src/amici.cpp
+    src/event.cpp
     src/misc.cpp
     src/rdata.cpp
     src/edata.cpp
@@ -193,6 +194,7 @@ set(AMICI_SRC_LIST
     include/amici/cblas.h
     include/amici/defines.h
     include/amici/edata.h
+    include/amici/event.h
     include/amici/exception.h
     include/amici/forwardproblem.h
     include/amici/hdf5.h
