--- a/cmake/AmiciConfig.cmake.in
+++ b/cmake/AmiciConfig.cmake.in
@@ -10,6 +10,7 @@ find_package(OpenMP)
 list(APPEND CMAKE_PREFIX_PATH
      @CMAKE_SOURCE_DIR@/ThirdParty/SuiteSparse/install/)
 
+set(AMICI_BLAS_USE_SCIPY_OPENBLAS @AMICI_BLAS_USE_SCIPY_OPENBLAS@)
 include("${CMAKE_CURRENT_LIST_DIR}/AmiciFindBLAS.cmake")
 
 find_dependency(SUNDIALS REQUIRED PATHS
