use accelerate on macos

--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
     "wheel",
     "numpy>=2.0",
     "cmake-build-extension==0.6.0",
-    "scipy-openblas64",
+    "scipy-openblas64; platform_system!='Darwin'",
     "swig",
 ]
 build-backend = "setuptools.build_meta"
@@ -29,7 +29,7 @@ dependencies = [
     "toposort",
     "setuptools>=48",
     "mpmath",
-    "scipy-openblas64",
+    "scipy-openblas64; platform_system!='Darwin'",
     "swig"
 ]
 license = "BSD-3-Clause"
