--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -12,8 +12,7 @@ RUN apt-get update && apt-get install -y \
     python3 \
     python3-dev \
     python3-pip \
-    python3-venv \
-    swig
+    python3-venv
 
 # prepare python install
 
